test/Vehicle/Test/CompileMode/Error/OtherVerifierErrors/quantifiedNat.vcl
@property
f : Bool
f = forall (x : Nat) . x >= 0